# chatterbox

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  st_chat.py  st_summary.py
chatterbox/: language_models.py  researcher_interface.py  utils.py  workflows.py
chatterbox/conditional_edges/: requires_additional_context.py
chatterbox/nodes/: arxiv_context_retriever.py  pdf_context_retriever.py  research_context_grader.py  research_context_summarizer.py  research_context_supervisor.py  simple_chat.py  triage.py  vdbs_context_retriever.py  web_context_retriever.py
examples/: ai_research_summary.py  gnn_interpolation_summary.py
tests/: __init__.py  test_arxiv_context_retriever.py  test_language_models.py  test_pdf_context_retriever.py  test_research_context_grader.py  test_research_context_summarizer.py  test_research_context_supervisor.py  test_research_interface.py  test_triage.py  test_vdbs_context_retriever.py  test_web_context_retriever.py
vdbs_documents/: create_vdbs.py  machine_learning_gloassary.py
