[project]
name = "chatterbox"
version = "0.1.0"
description = "A collection of multi-agent workflows and corresponding streamlit user interfaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=7.1.1",
    "jq>=1.8.0",
    "langchain-anthropic>=0.3.1",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-fireworks>=0.2.6",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.60",
    "openai>=1.58.1",
    "pymupdf>=1.25.1",
    "streamlit>=1.41.1",
    "tavily-python>=0.5.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4"]
